# Open_Data

./: README.md
safecity-app/: README.md  app.py  main.py  map_2024_all_crimes.html  map_2024_homicides.html  pyproject.toml  test_personne_b.ipynb
safecity-app/.ipynb_checkpoints/: test_personne_a-checkpoint.ipynb
safecity-app/data/processed/: crimes_data.parquet  insee_population.parquet  safecity_merged.parquet
safecity-app/pipeline/: __init__.py  config.py  models.py  run_pipeline.py  storage.py
safecity-app/pipeline/fetchers/: crimes_fetcher.py  geo_fetcher.py  insee_fetcher.py
safecity-app/utils/: charts.py  chatbot.py  data.py  maps.py
tp1-exploration/: FICHE_TECHNIQUE.md  README.md  exploration.ipynb  main.py  pyproject.toml
tp1-exploration/.ipynb_checkpoints/: exploration-checkpoint.ipynb
tp2-pipeline-bis/: README.md  main.py  pyproject.toml
tp2-pipeline-bis/.ipynb_checkpoints/: exploration-checkpoint.ipynb
tp2-pipeline-bis/data/processed/: weather_20251216_170346.parquet
tp2-pipeline-bis/data/raw/: weather_raw_20251216_165641.json  weather_raw_20251216_170110.json  weather_raw_20251216_170344.json
tp2-pipeline-bis/data/reports/: weather_quality_20251216_170346.md
tp2-pipeline-bis/pipeline/: config.py  enricher.py  main.py  models.py  quality.py  storage.py  transformer.py
tp2-pipeline-bis/pipeline/fetchers/: adresse.py  base.py  openmeteo.py
tp2-pipeline-bis/tests/: test_fetchers.py  test_transformer.py
tp3-app/: README.md  app_streamlit.py
tp3-app/utils/: charts.py  chatbot.py  data.py
